--- a/package.json
+++ b/package.json
@@ -14,11 +14,15 @@
     "@mui/icons-material": "^5.5.1",
     "@mui/material": "^5.5.3",
     "@mui/styles": "^5.5.3",
+    "antd": "^4.20.0",
     "axios": "^0.26.1",
+    "framer-motion": "^6.3.1",
     "lodash": "^4.17.21",
     "moment": "^2.29.1",
     "next": "^12.1.4",
     "react": "^18.0.0",
+    "react-css-theme-switcher": "^0.3.0",
+    "react-custom-scrollbars": "^4.2.1",
     "react-dom": "^18.0.0",
     "recoil": "^0.7.0"
   },
