--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@mui/styles": "^5.5.3",
     "antd": "^4.20.0",
     "axios": "^0.26.1",
+    "cookies-next": "^2.0.4",
     "framer-motion": "^6.3.1",
     "lodash": "^4.17.21",
     "moment": "^2.29.1",
@@ -24,6 +25,7 @@
     "react-css-theme-switcher": "^0.3.0",
     "react-custom-scrollbars": "^4.2.1",
     "react-dom": "^18.0.0",
+    "react-intl": "^5.25.1",
     "recoil": "^0.7.0"
   },
   "devDependencies": {
